# llm-evaluations

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/llm_evaluations/: __init__.py  temp.py
tests/: test_temp.py
